# etu_2024_04_os_lab

./: 2307_Podberyozskij_os_lab1_report.docx  2307_Podberyozskij_os_lab2_report.docx  2307_Podberyozskij_os_lab3_report.docx  2307_Podberyozskij_os_lab4_report.docx  CMakeLists.txt  README.md  lab1_ch1.cpp  lab2_ch1.cpp  lab3_ch1.cpp  lab3_ch2.cpp
lab4/part_1/: consts.hpp  dispatch.cpp  reader.cpp  writer.cpp
lab4/part_2/: client.cpp  server.cpp
